--- a/assets/style.index.css
+++ b/assets/style.index.css
@@ -1,3 +1,22 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    background-color: rgb(235, 210, 178));
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    margin: 2rem;
+}
+
+
 .card-profile {
     transition: transform 0.3s ease;
 }
