--- a/assets/style.index.css
+++ b/assets/style.index.css
@@ -44,3 +44,13 @@ body {
     cursor: pointer;
 }
 
+/* Animações */
+.card {
+    animation: fadeInAnimation 3s ease-in-out, bounceAnimation 2s ease-in-out;
+    animation-delay: 0.5s; 
+    transition: transform 0.3s ease-in-out; 
+}
+
+.card:hover {
+    transform: scale(1.07); 
+}
